<resources>
    <string name="app_name">青龙加速器</string>
    <string name="clash_for_android">@string/app_name</string>
    <string name="request_vpn_permission">获取VPN权限</string>
    <string name="proxy_mode_rule">智能模式</string>
    <string name="proxy_mode_global">全局模式</string>
    <string name="no_node">未选择节点</string>
    <string name="expire_format">到期时间：%s</string>
    <string name="unit_day">天</string>
    <string name="unit_hours">小时</string>
    <string name="unit_minutes">分钟</string>
    <string name="dialog_hint_title">温馨提示</string>
    <string name="to_pay">去订阅</string>
    <string name="load_more_loading">加载中&#8230;</string>
    <string name="new_version_title">检测到新版本</string>
    <string name="new_version_done">立即更新</string>
    <string name="new_version_cancel">暂不更新</string>
    <string name="login_token_expire_cancel">我知道了</string>
    <string name="unknown_host">未连接网络</string>
    <string name="vip_time_expire">您的订阅已到期</string>
    <string name="speed_zero">0.00KB</string>
    <string name="time_zero">00:00:00</string>
    <string name="get_sms_code_success">验证码获取成功</string>
    <string name="get_sms_code_failed">验证码获取失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="node_full_load">满载</string>
    <string name="reset_success">修改成功</string>
    <string name="reset_failed">修改失败</string>
        <string name="login_account_hint">用户名</string>
    <string name="login_code_title">邮箱验证码</string>
    <string name="login_code_hint">请输入验证码</string>
        <string name="login_code_get">发送</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="nodes_list_title">选择线路</string>
    <string name="get_vpn_permission_failed">获取VPN权限失败</string>
    <string name="login_title">用户登录</string>
    <string name="login_email">邮箱</string>
    <string name="login_email_hint">请输入邮箱</string>
    <string name="login_pwd">密码</string>
        <string name="login_pwd_hint">密码</string>
        <string name="login_to_register">注册</string>
    <string name="login_protocol_1">同意</string>
    <string name="login_protocol_2">《用户协议》</string>
    <string name="login_protocol_3">和</string>
    <string name="login_protocol_4">《隐私条款》</string>
    <string name="login_protocol_hint">请先同意《用户协议》和《隐私条款》</string>
        <string name="register_title">创建账号</string>
    <string name="register">注册</string>
    <string name="register_to_login">已有账号？去登录</string>
    <string name="login_failed">登录失败</string>
    <string name="tab_home">加速</string>
    <string name="tab_pay">充值</string>
    <string name="tab_user">我的</string>
    <string name="user_used_info">套餐使用情况</string>
    <string name="user_menu_order">我的订单</string>
    <string name="user_menu_invite">邀请好友</string>
    <string name="user_menu_pwd">密码管理</string>
    <string name="user_menu_message">消息中心</string>
    <string name="user_menu_about">关于我们</string>
    <string name="user_menu_service">联系客服</string>
    <string name="user_menu_change_account">切换用户</string>
        <string name="mode_title">代理模式</string>
    <string name="home_proxy_hint">一键全球网络加速</string>
    <string name="reset_pwd">修改密码</string>
    <string name="find_pwd">找回密码</string>
    <string name="origin_pwd_hint">请输入原密码</string>
    <string name="origin_pwd">原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="new_pwd_hint">请输入新密码，8–20位</string>
    <string name="confirm_pwd">确认新密码</string>
    <string name="find_pwd_email">注册邮箱</string>
    <string name="find_pwd_email_hint">请输入注册邮箱</string>
    <string name="find_pwd_email_code">邮箱验证码</string>
    <string name="find_pwd_email_code_hint">请输入验证码</string>
    <string name="submit">提交</string>
    <string name="pwd_manager">密码管理</string>
    <string name="node_refresh">刷新节点</string>
    <!---->
    <string name="login_button">登录</string>
    <string name="register_proto">使用条款</string>
    <string name="home_website">网址导航</string>
    <string name="home_used_title">已用</string>
    <string name="home_expire_title">有效期</string>
    <string name="vpn_toggle_off">连接</string>
    <string name="home_sign">已签到</string>
    <string name="home_node_title">服务器</string>
    <string name="home_mode_title">代理模式</string>
    <string name="rule_mode">智能模式</string>
    <string name="rule_mode_desc">根据规则路由流量</string>
    <string name="global_mode">全局模式</string>
    <string name="global_mode_desc">所有流量都路由到代理服务器</string>
    <string name="node_list_title">选择节点</string>
    <string name="mine_to_pay">续订</string>
    <string name="start_pay_code">优惠券码</string>

</resources>