<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg">

    <ex.ss.lib.base.view.ImmersiveStatusBarHolder
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_login_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/login_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_bar" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:src="@drawable/login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_login_service" />

    <ex.ss.lib.components.view.CardConstraintLayout
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="36dp"
        app:cardBackgroundColor="@color/color_363a3e"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintTop_toBottomOf="@id/iv_logo">

        <EditText
            android:id="@+id/et_input_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_login_input"
            android:hint="@string/login_account_hint"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="19dp"
            android:paddingVertical="14dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/color_66ffffff"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_input_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/shape_login_input"
            android:hint="@string/login_pwd_hint"
            android:inputType="textPassword"
            android:paddingHorizontal="19dp"
            android:paddingVertical="14dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/color_66ffffff"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_input_account" />

    </ex.ss.lib.components.view.CardConstraintLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_fill_button"
        android:gravity="center"
        android:text="@string/login_button"
        android:textColor="@color/button_text_color"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_input" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_outline_button"
        android:gravity="center"
        android:text="@string/login_to_register"
        android:textColor="@color/color_ff19c179"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login" />

    <TextView
        android:id="@+id/tv_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/login_forget_pwd"
        android:textColor="@color/color_ff19c179"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toTopOf="@id/nav_bar"
        app:layout_constraintEnd_toStartOf="@id/tv_guest_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/tv_guest_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:text="先去逛逛"
        android:textColor="@color/color_ff19c179"
        android:textSize="@dimen/text_size_16"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_forget_pwd"
        app:layout_constraintTop_toBottomOf="@id/tv_register"
        app:layout_constraintVertical_bias="0.8" />

    <ex.ss.lib.base.view.ImmersiveNavigationBarHolder
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>