<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_top_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/home_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="40dp"
            android:layout_height="34dp"
            android:src="@drawable/home_top_share"
            app:layout_constraintBottom_toBottomOf="@id/iv_top_icon"
            app:layout_constraintEnd_toStartOf="@id/iv_service"
            app:layout_constraintStart_toEndOf="@id/iv_top_icon"
            app:layout_constraintTop_toTopOf="@id/iv_top_icon" />

        <ImageView
            android:id="@+id/iv_service"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/home_service"
            app:layout_constraintBottom_toBottomOf="@id/iv_top_icon"
            app:layout_constraintEnd_toStartOf="@id/iv_message"
            app:layout_constraintStart_toEndOf="@id/iv_share"
            app:layout_constraintTop_toTopOf="@id/iv_top_icon" />

        <ImageView
            android:id="@+id/iv_message"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/home_message"
            app:layout_constraintBottom_toBottomOf="@id/iv_top_icon"
            app:layout_constraintEnd_toStartOf="@id/iv_mine"
            app:layout_constraintStart_toEndOf="@id/iv_service"
            app:layout_constraintTop_toTopOf="@id/iv_top_icon" />

        <ImageView
            android:id="@+id/iv_mine"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/home_mine"
            app:layout_constraintBottom_toBottomOf="@id/iv_top_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_message"
            app:layout_constraintTop_toTopOf="@id/iv_top_icon" />

        <TextView
            android:id="@+id/tv_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/shape_home_website"
            android:drawablePadding="6dp"
            android:paddingHorizontal="26dp"
            android:paddingVertical="6dp"
            android:text="@string/home_website"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/home_website_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_top_icon" />

        <TextView
            android:id="@+id/tv_used_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:layout_marginTop="34dp"
            android:text="@string/home_used_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_top_icon" />

        <TextView
            android:id="@+id/tv_used_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_ff19c179"
            android:textSize="@dimen/text_size_36"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_used_title"
            app:layout_constraintTop_toBottomOf="@id/tv_used_title"
            tools:text="631" />

        <TextView
            android:id="@+id/tv_expire_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:layout_marginTop="24dp"
            android:text="@string/home_expire_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_used_value" />

        <TextView
            android:id="@+id/tv_expire_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_ff19c179"
            android:textSize="@dimen/text_size_36"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_expire_title"
            app:layout_constraintTop_toBottomOf="@id/tv_expire_title"
            tools:text="20" />

        <ex.ss.lib.components.view.CardConstraintLayout
            android:id="@+id/layout_sing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:visibility="invisible"
            app:cardBackgroundColor="#FF19C179"
            app:cardCornerRadius="20dp"
            app:contentPaddingBottom="4dp"
            app:contentPaddingLeft="12dp"
            app:contentPaddingRight="12dp"
            app:contentPaddingTop="4dp"
            app:layout_constraintStart_toStartOf="@id/tv_expire_value"
            app:layout_constraintTop_toBottomOf="@id/tv_expire_value"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:text="@string/home_sign"
                android:textColor="#FF363A3E"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/home_sing_icon" />

        </ex.ss.lib.components.view.CardConstraintLayout>


        <ex.ss.lib.components.view.CardConstraintLayout
            android:id="@+id/layout_proxy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:cardBackgroundColor="@color/color_363A3E"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp"
            app:contentPaddingBottom="32dp"
            app:contentPaddingLeft="24dp"
            app:contentPaddingRight="27dp"
            app:contentPaddingTop="32dp"
            app:layout_constraintBottom_toTopOf="@id/tv_connect"
            app:layout_constraintTop_toBottomOf="@id/layout_sing">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_node"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_node_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home_node_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_current_node_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/home_node_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_18"
                    app:layout_constraintStart_toEndOf="@id/iv_node_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_current_node"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/color_ff19c179"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_node_icon"
                    tools:text="@string/no_node" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableEndCompat="@drawable/right_row"
                    app:drawableTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_mode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_node">

                <ImageView
                    android:id="@+id/iv_mode_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home_mode_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_current_mode_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/home_mode_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_18"
                    app:layout_constraintStart_toEndOf="@id/iv_mode_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_mode_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/mode_title"
                    android:textColor="@color/color_ff19c179"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_mode_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableEndCompat="@drawable/right_row"
                    app:drawableTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ex.ss.lib.components.view.CardConstraintLayout>

        <TextView
            android:id="@+id/tv_connect"
            style="@style/button_fill"
            android:background="@drawable/selector_vpn_toggle"
            android:text="@string/vpn_toggle_off"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_proxy" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_draw_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@drawable/shape_home_draw_bg">

        <ImageView
            android:id="@+id/iv_draw_close"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/mode_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_draw_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/home_website"
            android:textColor="@color/color_363A3E"
            android:textSize="@dimen/text_size_24"
            app:layout_constraintBottom_toBottomOf="@id/iv_draw_close"
            app:layout_constraintStart_toEndOf="@id/iv_draw_close"
            app:layout_constraintTop_toTopOf="@id/iv_draw_close" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_draw_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/iv_draw_close" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>